Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35606

Rectangle transparency problem

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.3.0
    • 5.2.0
    • None
    • Windows 7 64 bit, Qt 5.2.0 with MinGW and MSVC2012 32bit.
    • fe6ad3ad4550c9efd2c07ca25ce3625c0615fcba

      When a Rectangle's color has been set to "#00RRGGBB", and a border.color has been set to something, the Rectangle will display as black, instead of transparent. This does not happen if border.color is omitted. Setting the color of the Rectangle to "transparent" works fine, much like setting the color of the alpha channel to something that is not 00. A test can be made by making a standard "Qt Quick Application" with a qml file that looks something like:

      Rectangle
      {
          //...
          color: "#00ff0000"
          border.color: "blue"
          //...
      }
      

      An example QML file has been included.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sletta Gunnar Sletta
            lucijan Lucijan
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes